F8: add pilot replenishment workflow
